// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`platform/gl-got-wrapper accepts custom baseUrl 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "authorization": "Bearer token",
      "host": "api.bitbucket.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "POST",
    "url": "https://api.bitbucket.org/some-url",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "host": "api-test.bitbucket.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "POST",
    "url": "https://api-test.bitbucket.org/some-url",
  },
]
`;

exports[`platform/gl-got-wrapper posts 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "authorization": "Bearer token",
      "host": "api.bitbucket.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "POST",
    "url": "https://api.bitbucket.org/some-url",
  },
]
`;

exports[`platform/gl-got-wrapper returns cached 1`] = `Object {}`;

exports[`platform/gl-got-wrapper returns cached 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "authorization": "Bearer token",
      "host": "api.bitbucket.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/projects/foo",
  },
]
`;
